force-app/main/default/objects/AccountSettings__c/AccountSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Account Settings</label>
</CustomObject>