force-app/main/default/objects/AccountSettings__c/fields/GenericPUCContact__c.field-meta.xml
<CustomField>
    <fullName>GenericPUCContact__c</fullName>
    <label>Generic PUC Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>