force-app/main/default/objects/AccountSettings__c/fields/PublicCommentsAccountId__c.field-meta.xml
<CustomField>
    <fullName>PublicCommentsAccountId__c</fullName>
    <inlineHelpText>The Record Id for the &apos;Public Comments&apos; Account</inlineHelpText>
    <label>Public Comments Account Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>