force-app/main/default/objects/AccountSettings__c/fields/PUC_AccountId__c.field-meta.xml
<CustomField>
    <fullName>PUC_AccountId__c</fullName>
    <inlineHelpText>The Id of the PUC Account</inlineHelpText>
    <label>PUC Account Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>